clean up card html-css + remove custom.css

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -38,7 +38,7 @@
 		>
 	</price-product-overview>
 </div>
-<div class="col-sm-9 singleview-right" *ngIf="isEditing">
+<div class="col-sm-9 singleview-right edit-container" *ngIf="isEditing">
 	<price-product-edit-container
 		*ngIf="selectedPriceProductVM" 
 		[priceProductVM]="selectedPriceProductVM"
