--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
@@ -1,4 +1,4 @@
-<div class="row page-title">
+<div class="row card-header">
 	<div class="col-sm-10">
 		<h1>{{ 'Basic Information' | translate }} <small>{{ 'overview' | translate }}</small></h1>
 	</div>
@@ -14,7 +14,7 @@
 		<p>{{ '[Wizard Step 0] Basic Information text' | translate }}</p>
 	</div>
 </div>
-<div class="row x_panel">
+<div class="row card-body">
 	<div class="col-sm-12">
 		<basic-info-overview-edit></basic-info-overview-edit>
 	</div>
