--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -1,123 +1,128 @@
 <loading-component [isLoading]="!didInit"></loading-component>
 
-<div class="row" *ngIf="didInit">
-	<div class="row">
-		<div *ngIf="tableOptions.canSearch" [ngClass]="{'col-md-4': !isCollapsed, 'col-md-12': isCollapsed}" >
-			<div class="input-group">
-				<input type="text" class="form-control" placeholder="{{tableMeta.searchInputPlaceholder}}" [ngFormControl]="textSearchControl" />
-				<span class="input-group-btn">
-					<button class="btn" type="button" (click)="searchByText()">
-						<i class="glyphicon glyphicon-search"></i>
-					</button>
-				</span>
+<div *ngIf="didInit">
+		<div class="row">
+			<!--TODO: Investigate if !isCollapsed && !tableOptions.canSearch then the total sum is 16 != 12-->
+			<div *ngIf="tableOptions.canSearch" [ngClass]="{'col-md-4': !isCollapsed, 'col-md-12': isCollapsed}" >
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="{{tableMeta.searchInputPlaceholder}}" [ngFormControl]="textSearchControl" />
+					<span class="input-group-btn">
+						<button class="btn" type="button" (click)="searchByText()">
+							<i class="glyphicon glyphicon-search"></i>
+						</button>
+					</span>
+				</div>
+			</div>
+			<div class="col-md-4" *ngIf="!tableOptions.canSearch && !isCollapsed">
+			</div>
+			<div class="col-md-4" *ngIf="!isCollapsed">
+			</div>
+			<div class="col-md-4" *ngIf="!isCollapsed">
+				<div>
+					<label>{{ 'Show' | translate }}
+						<select [ngModel]="paginationIndex.numOfItemsPerPage" (change)="didChangeNumOfItemsPerPage($event.target.value)">
+							<option *ngFor="#nomPerPage of paginationIndex.nunOfItemsPerPageList" [value]="nomPerPage">
+								{{nomPerPage}}
+							</option>
+						</select> {{ 'items' | translate }}
+					</label>
+				</div>
 			</div>
 		</div>
-		<div class="col-md-4" *ngIf="!tableOptions.canSearch && !isCollapsed">
-		</div>
-		<div class="col-md-4" *ngIf="!isCollapsed">
-		</div>
-		<div class="col-md-4" *ngIf="!isCollapsed">
-			<div>
-				<label>{{ 'Show' | translate }}
-					<select [ngModel]="paginationIndex.numOfItemsPerPage" (change)="didChangeNumOfItemsPerPage($event.target.value)">
-						<option *ngFor="#nomPerPage of paginationIndex.nunOfItemsPerPageList" [value]="nomPerPage">
-							{{nomPerPage}}
-						</option>
-					</select> {{ 'items' | translate }}
-				</label>
+
+		<div class="row">
+			<div class="col-md-12">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th *ngFor="#columnMeta of columnMetaList">
+								{{ columnMeta.displayName | translate }}
+							</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr *ngFor="#item of itemList" [ngClass]="{active: (isSelected(item) && tableOptions.canSelect)}">
+							<td *ngFor="#columnMeta of columnMetaList" (click)="tableOptions.canSelect && didSelectItem(item)" [ngClass]="{'selectable-row': tableOptions.canSelect}">
+								<span *ngIf="isPercentage(columnMeta.valueMeta)">
+									{{ getItemValue(item, columnMeta.valueMeta) | percentage }}
+								</span>
+								<span *ngIf="isPrice(columnMeta.valueMeta)">
+									{{ getDependentItemValue(item, columnMeta.valueMeta) }}
+									{{ getItemValue(item, columnMeta.valueMeta) | price }}
+								</span>
+								<span *ngIf="isStringOrNumber(columnMeta.valueMeta)">
+									{{ getItemValue(item, columnMeta.valueMeta) | translate }}
+								</span>
+								<span *ngIf="isNotes(columnMeta.valueMeta)">
+									<small>
+										{{ getItemValue(item, columnMeta.valueMeta) | translate }}
+									</small>
+								</span>
+								<span *ngIf="isCapacity(columnMeta.valueMeta)">
+									{{ getItemValue(item, columnMeta.valueMeta).maxAdults }} <span class="unitpal-font">{{columnMeta.valueMeta.fonts.adult}}</span> {{ getItemValue(item, columnMeta.valueMeta).maxChildren }} <span class="unitpal-font">{{columnMeta.valueMeta.fonts.child}}</span>
+								</span>
+								<span *ngIf="isFontIcon(columnMeta.valueMeta)">
+									<span class="unitpal-font">{{getItemValue(item, columnMeta.valueMeta)}}</span> 
+								</span>
+							</td>
+							<td>
+								<a class="btn btn-xs" *ngIf="tableOptions.canCopy" (click)="copyItem(item)">
+									<i class="fa unitpal-font">[</i>
+								</a>
+								<a class="btn btn-xs" *ngIf="tableOptions.canEdit" (click)="editItem(item)">
+									<i class="fa unitpal-font">]</i>
+								</a>
+								<a class="btn btn-xs" *ngIf="tableOptions.canDelete" (click)="deleteItem(item)">
+									<i class="fa unitpal-font">\</i>
+								</a>
+							</td>
+						</tr>
+						<tr *ngIf="noResultsExist()">
+							<td [attr.colspan]="columnMetaList.length + 1">
+								<center>
+									{{ 'No items to display' | translate }}
+								</center>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
-	</div>
-	
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th *ngFor="#columnMeta of columnMetaList">
-					{{ columnMeta.displayName | translate }}
-				</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr *ngFor="#item of itemList" [ngClass]="{active: (isSelected(item) && tableOptions.canSelect)}">
-				<td *ngFor="#columnMeta of columnMetaList" (click)="tableOptions.canSelect && didSelectItem(item)" [ngClass]="{'selectable-row': tableOptions.canSelect}">
-					<span *ngIf="isPercentage(columnMeta.valueMeta)">
-						{{ getItemValue(item, columnMeta.valueMeta) | percentage }}
-					</span>
-					<span *ngIf="isPrice(columnMeta.valueMeta)">
-						{{ getDependentItemValue(item, columnMeta.valueMeta) }}
-						{{ getItemValue(item, columnMeta.valueMeta) | price }}
-					</span>
-					<span *ngIf="isStringOrNumber(columnMeta.valueMeta)">
-						{{ getItemValue(item, columnMeta.valueMeta) | translate }}
-					</span>
-					<span *ngIf="isNotes(columnMeta.valueMeta)">
-						<small>
-							{{ getItemValue(item, columnMeta.valueMeta) | translate }}
-						</small>
-					</span>
-                    <span *ngIf="isCapacity(columnMeta.valueMeta)">
-						{{ getItemValue(item, columnMeta.valueMeta).maxAdults }} <span class="unitpal-font">{{columnMeta.valueMeta.fonts.adult}}</span> {{ getItemValue(item, columnMeta.valueMeta).maxChildren }} <span class="unitpal-font">{{columnMeta.valueMeta.fonts.child}}</span>
-					</span>
-                    <span *ngIf="isFontIcon(columnMeta.valueMeta)">
-						<span class="unitpal-font">{{getItemValue(item, columnMeta.valueMeta)}}</span> 
-					</span>
-				</td>
-				<td>
-					<a class="btn btn-xs" *ngIf="tableOptions.canCopy" (click)="copyItem(item)">
-						<i class="fa unitpal-font">[</i>
-					</a>
-					<a class="btn btn-xs" *ngIf="tableOptions.canEdit" (click)="editItem(item)">
-						<i class="fa unitpal-font">]</i>
-					</a>
-					<a class="btn btn-xs" *ngIf="tableOptions.canDelete" (click)="deleteItem(item)">
-						<i class="fa unitpal-font">\</i>
-					</a>
-				</td>
-			</tr>
-			<tr *ngIf="noResultsExist()">
-				<td [attr.colspan]="columnMetaList.length + 1">
-					<center>
-						{{ 'No items to display' | translate }}
-					</center>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<div class="row table-foot">
-		<div class="col-sm-4" *ngIf="!isCollapsed">
-			<a class="btn btn-lg" *ngIf="tableOptions.canAdd" (click)="addItem()">
-				<i class="fa fa-plus"></i> {{tableMeta.addButtonText}}
-			</a>
-		</div>
-		<div class="col-sm-4" *ngIf="!isCollapsed">
-			<div class="dataTables_info" id="example_info" role="status" aria-live="polite">{{paginationIndex.pageNumberStat}}</div>
-		</div>
-		<div class="text-right"  [ngClass]="{'col-sm-4': !isCollapsed, 'col-sm-12': isCollapsed}">
-			<center>
-				<ul class="pagination">
-					<li [ngClass]="{disabled: isFirstPage()}">
-						<a (click)="updatePageNumber(paginationIndex.firstPageNumber)">
-							<i class="fa fa-angle-double-left"></i>
-						</a>
-					</li>
-					<li *ngFor="#index of paginationIndex.indexList" [ngClass]="{active: index.isSelected}">
-						<a (click)="updatePageNumber(index.pageNumber)">{{index.displayNumber}}</a>
-					</li>
-					<li [ngClass]="{disabled: isLastPage()}">
-						<a (click)="updatePageNumber(paginationIndex.lastPageNumber)">
-							<i class="fa fa-angle-double-right"></i>
-						</a>
-					</li>
-				</ul>
-			</center>
-		</div>
-		<div class="col-sm-12" *ngIf="isCollapsed">
-			<center>
+		<div class="row table-foot">
+			<div class="col-sm-4" *ngIf="!isCollapsed">
 				<a class="btn btn-lg" *ngIf="tableOptions.canAdd" (click)="addItem()">
 					<i class="fa fa-plus"></i> {{tableMeta.addButtonText}}
 				</a>
-			</center>
+			</div>
+			<div class="col-sm-4" *ngIf="!isCollapsed">
+				<div class="dataTables_info" id="example_info" role="status" aria-live="polite">{{paginationIndex.pageNumberStat}}</div>
+			</div>
+			<div class="text-right"  [ngClass]="{'col-sm-4': !isCollapsed, 'col-sm-12': isCollapsed}">
+				<center>
+					<ul class="pagination">
+						<li [ngClass]="{disabled: isFirstPage()}">
+							<a (click)="updatePageNumber(paginationIndex.firstPageNumber)">
+								<i class="fa fa-angle-double-left"></i>
+							</a>
+						</li>
+						<li *ngFor="#index of paginationIndex.indexList" [ngClass]="{active: index.isSelected}">
+							<a (click)="updatePageNumber(index.pageNumber)">{{index.displayNumber}}</a>
+						</li>
+						<li [ngClass]="{disabled: isLastPage()}">
+							<a (click)="updatePageNumber(paginationIndex.lastPageNumber)">
+								<i class="fa fa-angle-double-right"></i>
+							</a>
+						</li>
+					</ul>
+				</center>
+			</div>
+			<div class="col-sm-12" *ngIf="isCollapsed">
+				<center>
+					<a class="btn btn-lg" *ngIf="tableOptions.canAdd" (click)="addItem()">
+						<i class="fa fa-plus"></i> {{tableMeta.addButtonText}}
+					</a>
+				</center>
+			</div>
 		</div>
-	</div>
 </div>
