--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
@@ -1,19 +1,18 @@
-<div class="signup-step-07">
-	<div class="row page-title">
-		<div class="col-sm-4">
-			<h1>{{ 'Customer Register' | translate }} &gt; 
+<div class="row card-header signup-step-07">
+	<div class="col-sm-4">
+		<h1>{{ 'Customer Register' | translate }} &gt; 
 				<small *ngIf="!isEditScreen">{{ 'Overview' | translate }}</small>
 				<small *ngIf="isEditScreen">{{ 'Edit' | translate }}</small>
 			</h1>
-		</div>
-		<div class="col-sm-6 description">
-			<small>{{ '[Wizard Step 6] Customer Register text' | translate }}</small>
-		</div>
-		<div class="col-sm-2 text-right">
-			<h1>{{ _customerRegisterStateService.totalNoOfCustomers }} <span class="unitpal-font">{{ _customerRegisterStateService.getMeta().iconFontName }}</span></h1>
-		</div>
+	</div>
+	<div class="col-sm-6 description">
+		<small>{{ '[Wizard Step 6] Customer Register text' | translate }}</small>
+	</div>
+	<div class="col-sm-2 text-right">
+		<h1>{{ _customerRegisterStateService.totalNoOfCustomers }} <span class="unitpal-font">{{ _customerRegisterStateService.getMeta().iconFontName }}</span></h1>
 	</div>
 </div>
-<div class="row x_panel">
+
+<div class="row card-body">
 	<customer-register (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></customer-register>
 </div>
