--- a/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
@@ -3,10 +3,10 @@
 </header>
 <div class="container body">
 	<div class="row main-row">
-		<div class="col-md-2 left_col">
+		<div class="col-md-2">
 			<wizard-navbar-component></wizard-navbar-component>
 		</div>
-		<div class="right_col card signup-step" role="main">
+		<div class="col-md-10 card signup-step" role="main">
 			<router-outlet></router-outlet>
 			<div class="row bottom-row">
 				<wizard-steps-component></wizard-steps-component>
