--- a/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
@@ -1,14 +1,14 @@
 <header>
 	<wizard-header-component></wizard-header-component>
 </header>
-<div class="container body">
-	<div class="row main-row">
-		<div class="col-md-2">
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-2 wizard-nav">
 			<wizard-navbar-component></wizard-navbar-component>
 		</div>
 		<div class="col-md-10 card signup-step" role="main">
 			<router-outlet></router-outlet>
-			<div class="row bottom-row">
+			<div class="row">
 				<wizard-steps-component></wizard-steps-component>
 			</div>
 		</div>
