Moved wizard steps component in overview-right column

--- a/assets/client/src/pages/internal/containers/common/inventory/beds/main/template/beds.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/main/template/beds.html
@@ -15,8 +15,11 @@
 		[bedVM]="selectedBedVM"
 		(onEdit)="editBed($event)">
 	</bed-overview>
+	<div class="row">
+		<wizard-steps-component></wizard-steps-component>
+	</div>
 </div>
-<div class="col-sm-9 singleview-right" *ngIf="isEditing">
+<div class="col-sm-9 edit-container" *ngIf="isEditing">
 	<bed-edit
 		*ngIf="selectedBedVM" 
 		[bedVM]="selectedBedVM"
