--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
@@ -17,5 +17,9 @@
 <div class="row card-body">
 	<div class="col-sm-12">
 		<basic-info-overview-edit></basic-info-overview-edit>
+	<div class="row">
+		<wizard-steps-component></wizard-steps-component>
+	</div>
+		
 	</div>
 </div>
