--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
@@ -15,8 +15,13 @@
 		[addOnProductVM]="selectedAddOnProductVM"
 		(onEdit)="editAddOnProduct($event)">
 	</add-on-product-overview>
+
+	<div class="row">
+		<wizard-steps-component></wizard-steps-component>
+	</div>
+	
 </div>
-<div class="col-sm-9 singleview-right" *ngIf="isEditing">
+<div class="col-sm-9 edit-container" *ngIf="isEditing">
 	<add-on-product-edit
 		*ngIf="selectedAddOnProductVM" 
 		[filteredCategory]="filteredCategory"
