--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/intro/template/wizard-basic-info-intro.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/intro/template/wizard-basic-info-intro.html
@@ -12,4 +12,8 @@
 	<div class="col-md-8">
 		<p>{{ '[Wizard Step 0] Welcome Message' | translate }}</p>
 	</div>
+	<div class="row">
+		<wizard-steps-component></wizard-steps-component>
+	</div>
+	
 </div>
