--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/payments-policies/template/wizard-basic-info-payments-policies.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/payments-policies/template/wizard-basic-info-payments-policies.html
@@ -17,5 +17,9 @@
 <div class="row card-body">
 	<div class="col-sm-12">
 		<basic-info-payments-policies-edit></basic-info-payments-policies-edit>
+		<div class="row">
+			<wizard-steps-component></wizard-steps-component>
+		</div>
+		
 	</div>
 </div>
