--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/property-details/template/wizard-basic-info-property-details.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/property-details/template/wizard-basic-info-property-details.html
@@ -17,5 +17,9 @@
 <div class="row card-body">
 	<div class="col-sm-12">
 		<basic-info-property-details-edit></basic-info-property-details-edit>
+		<div class="row">
+			<wizard-steps-component></wizard-steps-component>
+		</div>
+		
 	</div>
 </div>
